refactor library build to use defined yaml